tests/snapshots/corpus__pptx_handmade_strict.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
## Strict slide title
Strict body text
--- stderr ---
