tests/snapshots/corpus__rtf_handmade_cocoa.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
**Release notes**
TextEdit ends every paragraph with a backslash before the line break.
A second paragraph, terminated with a CRLF pair.
- First item
- Second item
Body text immediately before a table.
| Name | Value |
| --- | --- |
| Retries | 3 |
Body text after the table.
--- stderr ---
