tests/snapshots/corpus__rtf_handmade_math.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
The roots are $x=\frac{-b\pm\sqrt{b^{2}-4ac}}{2a}$ for any a.
$$
\sum_{i=1}^{n}{x_{i}}=\sin{\left(\theta\right)}
$$
$$
\text{where }-1<x
$$
A price of $5 or $6 is not math.
--- stderr ---
