tests/snapshots/corpus__rtf_handmade_merge.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== section 1 ==
## Inherited heading
Plain paragraph between tables.
|  |  |  |  |
| --- | --- | --- | --- |
| A1 | B1 |  | C1 |
|  | Wide B2 |  |  |
| A3 wide |  | B3 wide |  |
| stray continuation |  | X |  |
--- stderr ---
