tests/snapshots/corpus__xlsb_handmade_sheet.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
| Region | north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north north | Notes |
| --- | --- | --- |
| 42 | 65.0% | $1,234.50 |
| 1.5 | 0.015 | 2026-03-15 |
| wide merge |  |  |
|  |  |  |
--- stderr ---
