tests/snapshots/corpus__xlsx_handmade_merged.snap
---
source: tests/corpus.rs
assertion_line: 66
expression: snap
---
exit: 0
--- stdout ---
== part 1 ==
|  |  |  |
| --- | --- | --- |
| Merged across |  | padded |
| tall | b2 | 3.5 |
|  | b3 |  |
--- stderr ---
